test/should_pass/basic_024.grg
actions basic_024;

test t {
	pattern {
	}
}

