test/should_fail/inh_010.grg
actions inh_010 using inh_model_010;

rule bla { pattern{} replace{} }
